wordpress.yaml
# wordpress.yaml
# Test namespace için
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: test
spec:
  ports:
  - port: 80
  selector:
    app: wordpress
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: test
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: wordpress-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-storage
        persistentVolumeClaim:
          claimName: test-wordpress-pvc
      nodeSelector:
        kubernetes.io/hostname: minikube-m05  # Test için taint olmayan node
---
# Production namespace için
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: production
spec:
  ports:
  - port: 80
  selector:
    app: wordpress
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: production
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      tolerations:
      - key: "environment"
        operator: "Equal"
        value: "production"
        effect: "NoSchedule"
      containers:
      - name: wordpress
        image: wordpress:latest
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: wordpress-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-storage
        persistentVolumeClaim:
          claimName: prod-wordpress-pvc
      nodeSelector:
        kubernetes.io/hostname: minikube-m02  # Production için taint’li node
